k8s/vs-rewrite-final.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.solo.io/v1","kind":"VirtualService","metadata":{"annotations":{},"name":"default","namespace":"gloo-system"},"spec":{"virtualHost":{"domains":["*"],"routes":[{"matchers":[{"exact":"/api/v1/create"}],"options":{"prefixRewrite":"/create"},"routeAction":{"single":{"upstream":{"name":"default-task-service-8080","namespace":"gloo-system"}}}},{"matchers":[{"exact":"/api/v1/users"}],"options":{"prefixRewrite":"/"},"routeAction":{"single":{"upstream":{"name":"default-task-se [...]
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - "*"
    routes:
      - matchers:
        - exact: /api/v1/healthz
        options:
          prefixRewrite: /check/healthz
        routeAction:
          single:
            upstream:
              name: default-task-service-8080
              namespace: gloo-system
      - matchers:
          - exact: /api/v1/create
        options:
          prefixRewrite: /create
        routeAction:
          single:
            upstream:
              name: default-task-service-8080
              namespace: gloo-system
      - matchers:
          - exact: /api/v1/tasks
        options:
          prefixRewrite: /
        routeAction:
          single:
            upstream:
              name: default-task-service-8080
              namespace: gloo-system
      - matchers:
          - prefix: /api/v1/tasks/
        options:
          prefixRewrite: /
        routeAction:
          single:
            upstream:
              name: default-task-service-8080
              namespace: gloo-system
