k8s/vs-rewrite.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.solo.io/v1","kind":"VirtualService","metadata":{"annotations":{},"name":"default","namespace":"gloo-system"},"spec":{"virtualHost":{"domains":["*"],"routes":[{"matchers":[{"exact":"/api/v1/create"}],"options":{"prefixRewrite":"/create"},"routeAction":{"single":{"upstream":{"name":"default-task-service-8080","namespace":"gloo-system"}}}},{"matchers":[{"exact":"/api/v1/users"}],"options":{"prefixRewrite":"/"},"routeAction":{"single":{"upstream":{"name":"default-task-se [...]
  managedFields:
  - apiVersion: gateway.solo.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:reportedBy: {}
        f:state: {}
        f:subresourceStatuses:
          .: {}
          f:*v1.Proxy.gloo-system.gateway-proxy:
            .: {}
            f:reportedBy: {}
            f:state: {}
    manager: gateway
    operation: Update
    time: "2020-12-22T21:47:15Z"
  - apiVersion: gateway.solo.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        .: {}
        f:virtualHost:
          .: {}
          f:domains: {}
      f:status: {}
    manager: glooctl
    operation: Update
  - apiVersion: gateway.solo.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:virtualHost:
          f:routes: {}
    manager: kubectl-client-side-apply
    operation: Update
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - exact: /api/v1/create
      options:
        prefixRewrite: /create
      routeAction:
        single:
          upstream:
            name: default-task-service-8080
            namespace: gloo-system
    - matchers:
      - exact: /api/v1/users
      options:
        prefixRewrite: /
      routeAction:
        single:
          upstream:
            name: default-task-service-8080
            namespace: gloo-system
